# shipyard-neo

./: .gitignore
deploy/docker/: config.yaml  docker-compose.yaml
deploy/k8s/: 02-configmap.yaml  06-gull-service.yaml
dev/: Makefile  config.yaml  docker-compose.yaml
doc/: shared-browser-pool-design.md
pkgs/bay/: Dockerfile  pyproject.toml
pkgs/bay/app/: config.py
pkgs/bay/app/adapters/: shared_gull.py
pkgs/bay/app/api/v1/: cargos.py
pkgs/bay/app/db/: session.py
pkgs/bay/app/drivers/: base.py
pkgs/bay/app/drivers/docker/: docker.py
pkgs/bay/app/drivers/k8s/: k8s.py
pkgs/bay/app/router/capability/: capability.py
pkgs/bay/app/services/skills/: service.py
pkgs/bay/app/services/warm_pool/: queue.py  scheduler.py
pkgs/bay/tests/integration/core/: test_cargo_api.py  test_profile_env_injection.py  test_sandbox_lifecycle.py  test_skill_lifecycle_api.py
pkgs/bay/tests/integration/gc/: test_cargo_gc.py
pkgs/bay/tests/integration/workflows/: test_agent_coding_workflow.py  test_long_running_extend_ttl.py  test_project_init.py  test_serverless_execution.py
pkgs/bay/tests/unit/adapters/: test_gull_adapter.py  test_shared_gull_adapter.py
pkgs/bay/tests/unit/config/: test_profile_v2.py  test_shared_browser_config.py
pkgs/bay/tests/unit/drivers/: test_build_container_config_conflict.py  test_k8s_driver.py
pkgs/bay/tests/unit/managers/: test_session_manager.py  test_shared_browser_cleanup.py
pkgs/bay/tests/unit/router/: test_shared_browser_router.py
pkgs/bay/tests/unit/warm_pool/: test_warmup_queue.py
pkgs/gull/: Dockerfile  pyproject.toml
pkgs/gull/app/: main.py  session.py
pkgs/gull/tests/: test_shared_session.py
pkgs/gull/tests/integration/: test_gull_api.py
pkgs/gull/tests/unit/: test_skills.py
pkgs/ship/: Dockerfile  pyproject.toml
pkgs/ship/app/components/: term.py
pkgs/ship/tests/: conftest.py
pkgs/ship/tests/unit/: test_skills.py  test_user_manager.py  test_workspace.py
shipyard-neo-mcp/: pyproject.toml
shipyard-neo-sdk/: pyproject.toml
shipyard-neo-sdk/shipyard_neo/: __init__.py  skills.py
